--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -1,19 +1,26 @@
 ---
-id: changelog
-title: Changelog
+id: v0.5.x
+title: Cambios en las versiones 0.5.x
 ---
 
-## v0.5.4
+### v0.5.5
+**24/06/2021**
 
-**Fecha 23/06/2021**
+**Cambios**
+- [Ronda] Se corrigió error en el refill que generaba una denegacion de servicio en el nodo RSK.
+
+### v0.5.4
+**23/06/2021**
+
 **Cambios**
 - [DIDI Issuer] Se corrigió error en los endpoints de Swagger.
 - [Ronda] Se actualizaron dependencias deprecadas
 - [Ronda] Se simplificó el proceso de build para QA.
-- [Ronda] e corrigió el spam de Application insigths en logs de docker. Ahora es más fácil debuguear.
+- [Ronda] Se corrigió el spam de Application insigths en logs de docker. Ahora es más fácil debuguear.
 
-## v0.5.3
-**Fecha 22/06/2021**
+### v0.5.3
+**22/06/2021**
+
 **Cambios**
 - [DIDI Issuer] Se corrigió configuración de Travis.
 - [DIDI Issuer] e corrigió el spam de Application insigths en logs de docker. Ahora es más fácil debuguear.
@@ -22,8 +29,9 @@ title: Changelog
 - [DIDI Server] Se agregaron test para servicios MailService y SmsService.
 - [DIDI Server] Se corrigió configuración de Travis
 
-## v0.5.2
-**Fecha 03/06/2021**
+### v0.5.2
+**03/06/2021**
+
 **Cambios**
 - [DIDI Server] Se corrigió el spam de Application insigths en logs de docker. Ahora es más fácil debuguear
 - [DIDI Server] Se corrigió un error en swgger que agregaba : en los endpoints
