--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -3,16 +3,23 @@ id: v0.5.x
 title: Cambios en las versiones 0.5.x
 ---
 
+### v0.5.6
+**25/06/2021**
+
+- [Blockchain Manager] Release v1.2.0. No se permite operar sobre una blockchain que no está sincronizada.
+- [DIDI Server] [DIDI Issuer] [Mouro] Se actualizó la versión de blockchain manager, ahora los errores son más descriptivos cuando un nodo blockchain no se encuentra sincronizado.
+- [DIDI Issuer] Se corrigió error de parametros faltantes EXPDATE y CODE.
+- [DIDI Issuer] Se corrigió error de desencriptado, introducido por auto fix de linter.
+- [DIDI Server] Se corrigió un error en la sincronización de apps, donde la verificación de certificados lanzaba un error distino a credencial invalida.
+- [Ronda] Se agrega soporte para consulta isSyncing en nodo publico RSK.
+
 ### v0.5.5
 **24/06/2021**
-
-**Cambios**
 - [Ronda] Se corrigió error en el refill que generaba una denegacion de servicio en el nodo RSK.
 
 ### v0.5.4
 **23/06/2021**
 
-**Cambios**
 - [DIDI Issuer] Se corrigió error en los endpoints de Swagger.
 - [Ronda] Se actualizaron dependencias deprecadas
 - [Ronda] Se simplificó el proceso de build para QA.
@@ -21,9 +28,8 @@ title: Cambios en las versiones 0.5.x
 ### v0.5.3
 **22/06/2021**
 
-**Cambios**
 - [DIDI Issuer] Se corrigió configuración de Travis.
-- [DIDI Issuer] e corrigió el spam de Application insigths en logs de docker. Ahora es más fácil debuguear.
+- [DIDI Issuer] Se corrigió el spam de Application insigths en logs de docker. Ahora es más fácil debuguear.
 - [DIDI Issuer] Se corrigió error de parametros faltantes REVOKED y EMMITED.
 - [DIDI Server] Se corrigió error que generaba credenciale vencidas, que luego llegaban a la app pero no se visualizan.
 - [DIDI Server] Se agregaron test para servicios MailService y SmsService.
@@ -32,7 +38,6 @@ title: Cambios en las versiones 0.5.x
 ### v0.5.2
 **03/06/2021**
 
-**Cambios**
 - [DIDI Server] Se corrigió el spam de Application insigths en logs de docker. Ahora es más fácil debuguear
 - [DIDI Server] Se corrigió un error en swgger que agregaba : en los endpoints
 - [DIDI Server] Se corrigieron varios errores #service-missingX
