--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -3,8 +3,15 @@ id: v0.5.x
 title: Cambios en las versiones 0.5.x
 ---
 
-### v0.5.6
+### v0.5.7
 **25/06/2021**
+
+- [DIDI Issuer] Se mejoro la descripción de error al enviar datos invalidos intentando modificar una credencial. Parámetro ERRMSG.
+- [DIDI Issuer] Se corrigió error de revocación de credenciales introducido en #149.
+- [DIDI Issuer] Se corrigió error de hashing de credenciales introducido en #153.
+
+### v0.5.6
+**24/06/2021**
 
 - [Blockchain Manager] Release v1.2.0. No se permite operar sobre una blockchain que no está sincronizada.
 - [DIDI Server] [DIDI Issuer] [Mouro] Se actualizó la versión de blockchain manager, ahora los errores son más descriptivos cuando un nodo blockchain no se encuentra sincronizado.
