--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -6,7 +6,8 @@ title: Cambios en las versiones 0.5.x
 ### v0.5.7
 **25/06/2021**
 
-- [DIDI Issuer] Se mejoro la descripción de error al enviar datos invalidos intentando modificar una credencial. Parámetro ERRMSG.
+- [DIDI Server] Se corrigió un error al dar de alta usuarios pertenecientes a una app mediante un token. ERRMSG.
+- [DIDI Issuer] Se mejoro la descripción de error al enviar datos invalidos intentando modificar una credencial.
 - [DIDI Issuer] Se corrigió error de revocación de credenciales introducido en #149.
 - [DIDI Issuer] Se corrigió error de hashing de credenciales introducido en #153.
 
