--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -3,6 +3,13 @@ id: v0.5.x
 title: Cambios en las versiones 0.5.x
 ---
 
+### v0.5.8
+**25/06/2021**
+
+- [DIDI Server] Se corrigió la ruta /presentation/:id
+- [DIDI Server] Se corrigió un error en en la verificación de credenciales que actualizaba el estado de una credencial distinta a la verificada.
+- [DIDI Issuer] Se corrigió un error al revocar una credencial pendiente que solicitaba usuario y razon. Parámetros REASON y USERID.
+
 ### v0.5.7
 **25/06/2021**
 
