Se agregan cambios de la version 0.5.10

--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -3,6 +3,17 @@ id: v0.5.x
 title: Cambios en las versiones 0.5.x
 ---
 
+### v0.5.10
+**25/06/2021**
+
+- [DIDI Server] Se actualizo la normalización y validación de teléfono para permitir ingresar de otros paises.
+- [DIDI Server] Se corrigieron test para la validación de los teléfonos.
+- [DIDI Server] Se corrigió el endpoint verifyCertificate.
+- [DIDI Server] Se corrigió el servicio de Renaper.
+- [aidi] Se actualizo la normalización y validación de teléfono para permitir ingresar de otros paises.
+- [aidi] Se agregaron imagenes de banderas y prefijo por país al validar teléfono.
+- [DIDI Issuer] Se corrigió el uso de la función isNaN en la validación de parametros.
+
 ### v0.5.9
 **25/06/2021**
 
