Se agregaron cambios de la version 0.5.11

--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -3,8 +3,17 @@ id: v0.5.x
 title: Cambios en las versiones 0.5.x
 ---
 
+### v0.5.11
+**05/07/2021**
+
+- [DIDI-SSI-JWT_validator_viewer] Se agrego la version de node en el archivo .nvmrc.
+- [DIDI Server] Se elimina validación de constantes al mandar notificaciones de firebase.
+- [DIDI Server] Se actualiza constante de Title en nueva credencial, para pushNotification.
+- [DIDI Server] Se eliminan algunos test innecesarios de Firebase.test.js.
+- [DIDI Server] Se agregan test para el servicio de token.
+
 ### v0.5.10
-**25/06/2021**
+**01/07/2021**
 
 - [DIDI Server] Se actualizo la normalización y validación de teléfono para permitir ingresar de otros paises.
 - [DIDI Server] Se corrigieron test para la validación de los teléfonos.
