cambios en la version 0.5.12

--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -4,6 +4,12 @@ title: Cambios en las versiones 0.5.x
 ---
 
 ### v0.5.11
+**06/07/2021**
+
+- [DIDI Server] Se elimina validación de constante analyzeOcr, en servicio de Renaper.
+- [DIDI Issuer] Se corrige asignación de fecha de expiración al crear las credenciales, teniendo en cuenta como las recibe aidi.
+
+### v0.5.11
 **05/07/2021**
 
 - [DIDI-SSI-JWT_validator_viewer] Se agrego la version de node en el archivo .nvmrc.
