--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -2,8 +2,13 @@
 id: v0.5.x
 title: Cambios en las versiones 0.5.x
 ---
+### v0.5.13
+**08/07/2021**
 
-### v0.5.11
+- [DIDI Server] Test servicios firebase y presentation. [#146](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/146) y [#150](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/150)
+- [DIDI JWT Validator] Se ocultó botón de verificar. [#15](https://github.com/ong-bitcoin-argentina/DIDI-SSI-JWT_validator_viewer/pull/15)
+
+### v0.5.12
 **06/07/2021**
 
 - [DIDI Server] Se elimina validación de constante analyzeOcr, en servicio de Renaper.
@@ -12,7 +17,7 @@ title: Cambios en las versiones 0.5.x
 ### v0.5.11
 **05/07/2021**
 
-- [DIDI-SSI-JWT_validator_viewer] Se agrego la version de node en el archivo .nvmrc.
+- [DIDI JWT Validator ] Se agrego la version de node en el archivo .nvmrc.
 - [DIDI Server] Se elimina validación de constantes al mandar notificaciones de firebase.
 - [DIDI Server] Se actualiza constante de Title en nueva credencial, para pushNotification.
 - [DIDI Server] Se eliminan algunos test innecesarios de Firebase.test.js.
