--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -3,10 +3,13 @@ id: v0.5.x
 title: Cambios en las versiones 0.5.x
 ---
 ### v0.5.13
-**08/07/2021**
+**16/07/2021**
 
-- [DIDI Server] Test servicios firebase y presentation. [#146](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/146) y [#150](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/150)
+- [DIDI Server] Test servicios firebase [#146](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/146),presentation [#150](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/150), Token , Mouro [#160](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/160), Blockchain [#161](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/160) y shareRequest [#163](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/161)
+- [DIDI Server] Más fixes verificación identidad [#159](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/159) y [#156](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/156)
 - [DIDI JWT Validator] Se ocultó botón de verificar. [#15](https://github.com/ong-bitcoin-argentina/DIDI-SSI-JWT_validator_viewer/pull/15)
+- [Blockchain Manager] Fix método revokeDelegate que no estaba expuesto. [#15](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/15)
+- [Blockchain Manager] Versión v1.2.1 [#16](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/16)
 
 ### v0.5.12
 **06/07/2021**
