--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -8,8 +8,8 @@ title: Cambios en las versiones 0.5.x
 - [DIDI Server] Test servicios firebase [#146](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/146),presentation [#150](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/150), Token , Mouro [#160](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/160), Blockchain [#161](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/160) y shareRequest [#163](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/161)
 - [DIDI Server] Más fixes verificación identidad [#159](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/159) y [#156](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/156)
 - [DIDI JWT Validator] Se ocultó botón de verificar. [#15](https://github.com/ong-bitcoin-argentina/DIDI-SSI-JWT_validator_viewer/pull/15)
-- [Blockchain Manager] Fix método revokeDelegate que no estaba expuesto. [#15](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/15)
-- [Blockchain Manager] Versión v1.2.1 [#16](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/16)
+- [Blockchain Manager] Fix método revokeDelegate que no estaba expuesto y release v1.2.1 [#15](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/15) y [#16](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/16)
+- [Blockchain Manager] Fix problemas de concurrencia y release v1.3.0 [#17](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/15)
 
 ### v0.5.12
 **06/07/2021**
