--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -2,6 +2,15 @@
 id: v0.5.x
 title: Cambios en las versiones 0.5.x
 ---
+### v0.5.14
+**21/07/2021**
+
+- [DIDI Server] Test servicios usuarios [#166](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/166) y credenciales (certService) [#167](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/167)
+- [Semillas frontend] Se Mejoró la visualzación de mensajes de error [#8](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Semillas-frontend/pull/8)
+- [Semillas backend] Fix mensajes de error para **emprendimiento** [#15](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Semillas-backend/pull/15)
+- [Blockchain Manager] Se refactorizó el manejo de errores mejorando la legibilidd y mantenibilidad [#18](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/18)
+- [aidi] Se agregá linter, ahora se realiza chequeo estático del código [#126](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/126)
+
 ### v0.5.13
 **19/07/2021**
 
@@ -9,7 +18,7 @@ title: Cambios en las versiones 0.5.x
 - [DIDI Server] Más fixes verificación identidad [#159](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/159) y [#156](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/156)
 - [DIDI JWT Validator] Se ocultó botón de verificar. [#15](https://github.com/ong-bitcoin-argentina/DIDI-SSI-JWT_validator_viewer/pull/15)
 - [Blockchain Manager] Fix método revokeDelegate que no estaba expuesto y release v1.2.1 [#15](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/15) y [#16](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/16)
-- [Blockchain Manager] Fix problemas de concurrencia y release v1.3.0 [#17](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/15)
+- [Blockchain Manager] Fix problemas de concurrencia y release v1.3.0 [#17](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/17)
 
 ### v0.5.12
 **06/07/2021**
