--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -2,14 +2,22 @@
 id: v0.5.x
 title: Cambios en las versiones 0.5.x
 ---
+### v0.5.15
+**23/07/2021**
+- [Semillas] Se completó la migración. Ahora se encuentran en servidores separados.
+- [aidi] Se agregá linter, ahora se realiza chequeo estático del código
+
 ### v0.5.14
-**21/07/2021**
+**20/07/2021**
 
 - [DIDI Server] Test servicios usuarios [#166](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/166) y credenciales (certService) [#167](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/167)
 - [Semillas frontend] Se Mejoró la visualzación de mensajes de error [#8](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Semillas-frontend/pull/8)
 - [Semillas backend] Fix mensajes de error para **emprendimiento** [#15](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Semillas-backend/pull/15)
 - [Blockchain Manager] Se refactorizó el manejo de errores mejorando la legibilidd y mantenibilidad [#18](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/18)
-- [aidi] Se agregá linter, ahora se realiza chequeo estático del código [#126](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/126)
+- [devOps] Se configuró el repositorios de deploy a Semillas y Deploy DIDI para trabajar por serparado.
+- [devOps] Se actulizó el dominio en los servidores de DIDI y Semillas. Ahora tienen nombres uniformes.
+- [Scripts] Nuevo script de utilización de blockchain en Proyecto DIDI
+- [Semillas frontend] Se corrigió un error de variables de entorno [#9](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Semillas-frontend/pull/9)
 
 ### v0.5.13
 **19/07/2021**
