--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -3,6 +3,13 @@ id: v0.5.x
 title: Cambios en las versiones 0.5.x
 ---
 ### v0.5.15
+**30/07/2021**
+- [DIDI Server] Se actualiza el modelo Issuer, para que contenga dentro de sus campos una descripcion y una imagen.
+- [DIDI Server] Se actualizan las rutas POST /issuer y GET /issuer/:did para que sean compatibles con los cambios del modelo.
+- [DIDI Server] Se cambia la ruta PUT /issuer/:did por PATCH /issuer/:did, permitiendo cambiar nombre, descripcion e imagen de un emisor.
+- [DIDI Server] Se crea la ruta GET /issuer/list que devuelve la lista de emisores activos en la base de datos de DIDI-Server.
+
+### v0.5.15
 **23/07/2021**
 - [Semillas] Se completó la migración. Ahora se encuentran en servidores separados.
 - [aidi] Se agregá linter, ahora se realiza chequeo estático del código
