add pr to changes v0.5.15

--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -8,6 +8,7 @@ title: Cambios en las versiones 0.5.x
 - [DIDI Server] Se actualizan las rutas POST /issuer y GET /issuer/:did para que sean compatibles con los cambios del modelo.
 - [DIDI Server] Se cambia la ruta PUT /issuer/:did por PATCH /issuer/:did, permitiendo cambiar nombre, descripcion e imagen de un emisor.
 - [DIDI Server] Se crea la ruta GET /issuer/list que devuelve la lista de emisores activos en la base de datos de DIDI-Server.
+- Cambios realizados en el siguiente Pull Request [#172](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/172)
 
 ### v0.5.15
 **23/07/2021**
