--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -2,6 +2,14 @@
 id: v0.5.x
 title: Cambios en las versiones 0.5.x
 ---
+### v0.5.16
+**3/08/2021**
+- [DIDI Server] Se corrigen nombres de algunos controladore de IssuerRoutes.
+- [DIDI Server] Se agrega el imageId en cada issuer y la cantidad total de paginas para el endpoint /issuer/list
+- [DIDI Server] Se corrigen errores varios.
+- [DIDI Server] Se optimizan los lamados a la db en IssuerModel.
+- Cambios realizados en el siguiente Pull Request [#173](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/173)
+
 ### v0.5.15
 **30/07/2021**
 - [DIDI Server] Se actualiza el modelo Issuer, para que contenga dentro de sus campos una descripcion y una imagen.
