--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -4,22 +4,19 @@ title: Cambios en las versiones 0.5.x
 ---
 ### v0.5.16
 **3/08/2021**
-- [DIDI Server] Se corrigen nombres de algunos controladore de IssuerRoutes.
-- [DIDI Server] Se agrega el imageId en cada issuer y la cantidad total de paginas para el endpoint /issuer/list
-- [DIDI Server] Se corrigen errores varios.
-- [DIDI Server] Se optimizan los lamados a la db en IssuerModel.
-- Cambios realizados en el siguiente Pull Request [#173](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/173)
+
+- [DIDI Server] Se corrigió los nombres de los controladores de Issuer mejorando la legibilidad del código. [#173](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/173)
+- [DIDI Server] Se agregó imageId y total de páginas para GET /issuer/list. [#173](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/173)
+- [DIDI Server] Se corrigen errores varios. [#173](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/173)
+- [Semillas] Se corrigió un error de cors.}
+- [Semillas] Se agregó fecha y se removió la validación de preguntas al descrgar los pdf de reporte de encuestas.
 
 ### v0.5.15
 **30/07/2021**
-- [DIDI Server] Se actualiza el modelo Issuer, para que contenga dentro de sus campos una descripcion y una imagen.
-- [DIDI Server] Se actualizan las rutas POST /issuer y GET /issuer/:did para que sean compatibles con los cambios del modelo.
-- [DIDI Server] Se cambia la ruta PUT /issuer/:did por PATCH /issuer/:did, permitiendo cambiar nombre, descripcion e imagen de un emisor.
-- [DIDI Server] Se crea la ruta GET /issuer/list que devuelve la lista de emisores activos en la base de datos de DIDI-Server.
-- Cambios realizados en el siguiente Pull Request [#172](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/172)
 
-### v0.5.15
-**23/07/2021**
+- [DIDI Server] Se actualizó el modelo Issuer, para que contenga dentro de sus campos una descripción y una imagen. Este cambio afectó las rutas POST /issuer y GET /issuer/:did [#172](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/172)
+- [DIDI Server] Se actualizó la ruta PUT /issuer/:did por PATCH /issuer/:did, permitiendo cambiar nombre, descripcion e imagen de un emisor. [#172](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/172)
+- [DIDI Server] Se creó la ruta GET /issuer/list que devuelve la lista de emisores activos en la base de datos de DIDI-Server. [#172](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/172)
 - [Semillas] Se completó la migración. Ahora se encuentran en servidores separados.
 - [aidi] Se agregá linter, ahora se realiza chequeo estático del código
 
