--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -8,7 +8,7 @@ title: Cambios en las versiones 0.5.x
 - [DIDI Server] Se corrigió los nombres de los controladores de Issuer mejorando la legibilidad del código. [#173](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/173)
 - [DIDI Server] Se agregó imageId y total de páginas para GET /issuer/list. [#173](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/173)
 - [DIDI Server] Se corrigen errores varios. [#173](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/173)
-- [Semillas] Se corrigió un error de cors.}
+- [Semillas] Se corrigió un error de cors.
 - [Semillas] Se agregó fecha y se removió la validación de preguntas al descrgar los pdf de reporte de encuestas.
 
 ### v0.5.15
