add change log for v0.6.1

--- a/docs/v0.5.x.md
+++ b/docs/v0.5.x.md
@@ -2,6 +2,14 @@
 id: v0.5.x
 title: Cambios en las versiones 0.5.x
 ---
+### v0.6.1
+**17/08/2021**
+
+- [Semillas] Se corrigio bug en la creación de credenciales de vivienda.
+- [Semillas] Se modifico cron para que la sincronización se ejecute todos los dias a las 8am.
+- [Semillas] Se corrigio flujo de validación de carga de credenciales de vivienda mediante excel.
+- [Semillas] Se corrigio endpoint de revocar credencial.
+
 ### v0.5.16
 **3/08/2021**
 
