--- a/docs/changelog/v0.5.x.md
+++ b/docs/changelog/v0.5.x.md
@@ -15,7 +15,7 @@ title: Cambios en las versiones 0.5.x
 **30/07/2021**
 
 - [DIDI Server] Se actualizó el modelo Issuer, para que contenga dentro de sus campos una descripción y una imagen. Este cambio afectó las rutas POST /issuer y GET /issuer/:did [#172](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/172)
-- [DIDI Server] Se actualizó la ruta PUT /issuer/:did por PATCH /issuer/:did, permitiendo cambiar nombre, descripcion e imagen de un emisor. [#172](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/172)
+- [DIDI Server] Se actualizó la ruta PUT /issuer/:did por PATCH /issuer/:did, permitiendo cambiar nombre, descripción e imagen de un emisor. [#172](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/172)
 - [DIDI Server] Se creó la ruta GET /issuer/list que devuelve la lista de emisores activos en la base de datos de DIDI-Server. [#172](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/172)
 - [Semillas] Se completó la migración. Ahora se encuentran en servidores separados.
 - [aidi] Se agregá linter, ahora se realiza chequeo estático del código
@@ -24,11 +24,11 @@ title: Cambios en las versiones 0.5.x
 **20/07/2021**
 
 - [DIDI Server] Test servicios usuarios [#166](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/166) y credenciales (certService) [#167](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/167)
-- [Semillas frontend] Se Mejoró la visualzación de mensajes de error [#8](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Semillas-frontend/pull/8)
+- [Semillas frontend] Se Mejoró la visualización de mensajes de error [#8](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Semillas-frontend/pull/8)
 - [Semillas backend] Fix mensajes de error para **emprendimiento** [#15](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Semillas-backend/pull/15)
-- [Blockchain Manager] Se refactorizó el manejo de errores mejorando la legibilidd y mantenibilidad [#18](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/18)
-- [devOps] Se configuró el repositorios de deploy a Semillas y Deploy DIDI para trabajar por serparado.
-- [devOps] Se actulizó el dominio en los servidores de DIDI y Semillas. Ahora tienen nombres uniformes.
+- [Blockchain Manager] Se refactorizó el manejo de errores mejorando la legibilidad y mantenibilidad [#18](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/18)
+- [devOps] Se configuró el repositorios de deploy a Semillas y Deploy DIDI para trabajar por separado.
+- [devOps] Se actualizó el dominio en los servidores de DIDI y Semillas. Ahora tienen nombres uniformes.
 - [Scripts] Nuevo script de utilización de blockchain en Proyecto DIDI
 - [Semillas frontend] Se corrigió un error de variables de entorno [#9](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Semillas-frontend/pull/9)
 
@@ -59,32 +59,32 @@ title: Cambios en las versiones 0.5.x
 ### v0.5.10
 **01/07/2021**
 
-- [DIDI Server] Se actualizo la normalización y validación de teléfono para permitir ingresar de otros paises.
+- [DIDI Server] Se actualizo la normalización y validación de teléfono para permitir ingresar de otros países.
 - [DIDI Server] Se corrigieron test para la validación de los teléfonos.
 - [DIDI Server] Se corrigió el endpoint verifyCertificate.
 - [DIDI Server] Se corrigió el servicio de Renaper.
-- [aidi] Se actualizo la normalización y validación de teléfono para permitir ingresar de otros paises.
-- [aidi] Se agregaron imagenes de banderas y prefijo por país al validar teléfono.
-- [DIDI Issuer] Se corrigió el uso de la función isNaN en la validación de parametros.
+- [aidi] Se actualizo la normalización y validación de teléfono para permitir ingresar de otros países.
+- [aidi] Se agregaron imágenes de banderas y prefijo por país al validar teléfono.
+- [DIDI Issuer] Se corrigió el uso de la función isNaN en la validación de parámetros.
 
 ### v0.5.9
 **25/06/2021**
 
-- [DIDI Server] Se corrigió error de parametro obligatorio ERRMSG en servicio AuthRequestService función update.
-- [DIDI Server] Se corrigió error de parametros faltantes HASH y ERRMSG en verifyCertificate llamado desde validateAppOrUserJWT.
+- [DIDI Server] Se corrigió error de parámetro obligatorio ERRMSG en servicio AuthRequestService función update.
+- [DIDI Server] Se corrigió error de parámetros faltantes HASH y ERRMSG en verifyCertificate llamado desde validateAppOrUserJWT.
 
 ### v0.5.8
 **25/06/2021**
 
 - [DIDI Server] Se corrigió la ruta /presentation/:id
 - [DIDI Server] Se corrigió un error en en la verificación de credenciales que actualizaba el estado de una credencial distinta a la verificada.
-- [DIDI Issuer] Se corrigió un error al revocar una credencial pendiente que solicitaba usuario y razon. Parámetros REASON y USERID.
+- [DIDI Issuer] Se corrigió un error al revocar una credencial pendiente que solicitaba usuario y razón. Parámetros REASON y USERID.
 
 ### v0.5.7
 **25/06/2021**
 
 - [DIDI Server] Se corrigió un error al dar de alta usuarios pertenecientes a una app mediante un token. ERRMSG.
-- [DIDI Issuer] Se mejoro la descripción de error al enviar datos invalidos intentando modificar una credencial.
+- [DIDI Issuer] Se mejoro la descripción de error al enviar datos inválidos intentando modificar una credencial.
 - [DIDI Issuer] Se corrigió error de revocación de credenciales introducido en #149.
 - [DIDI Issuer] Se corrigió error de hashing de credenciales introducido en #153.
 
@@ -93,14 +93,14 @@ title: Cambios en las versiones 0.5.x
 
 - [Blockchain Manager] Release v1.2.0. No se permite operar sobre una blockchain que no está sincronizada.
 - [DIDI Server] [DIDI Issuer] [Mouro] Se actualizó la versión de blockchain manager, ahora los errores son más descriptivos cuando un nodo blockchain no se encuentra sincronizado.
-- [DIDI Issuer] Se corrigió error de parametros faltantes EXPDATE y CODE.
+- [DIDI Issuer] Se corrigió error de parámetros faltantes EXPDATE y CODE.
 - [DIDI Issuer] Se corrigió error de desencriptado, introducido por auto fix de linter.
-- [DIDI Server] Se corrigió un error en la sincronización de apps, donde la verificación de certificados lanzaba un error distino a credencial invalida.
+- [DIDI Server] Se corrigió un error en la sincronización de apps, donde la verificación de certificados lanzaba un error distinto a credencial invalida.
 - [Ronda] Se agrega soporte para consulta isSyncing en nodo publico RSK.
 
 ### v0.5.5
 **24/06/2021**
-- [Ronda] Se corrigió error en el refill que generaba una denegacion de servicio en el nodo RSK.
+- [Ronda] Se corrigió error en el refill que generaba una denegación de servicio en el nodo RSK.
 
 ### v0.5.4
 **23/06/2021**
@@ -115,8 +115,8 @@ title: Cambios en las versiones 0.5.x
 
 - [DIDI Issuer] Se corrigió configuración de Travis.
 - [DIDI Issuer] Se corrigió el spam de Application insigths en logs de docker. Ahora es más fácil debuguear.
-- [DIDI Issuer] Se corrigió error de parametros faltantes REVOKED y EMMITED.
-- [DIDI Server] Se corrigió error que generaba credenciale vencidas, que luego llegaban a la app pero no se visualizan.
+- [DIDI Issuer] Se corrigió error de parámetros faltantes REVOKED y EMMITED.
+- [DIDI Server] Se corrigió error que generaba credenciales vencidas, que luego llegaban a la app pero no se visualizan.
 - [DIDI Server] Se agregaron test para servicios MailService y SmsService.
 - [DIDI Server] Se corrigió configuración de Travis
 
@@ -126,6 +126,6 @@ title: Cambios en las versiones 0.5.x
 - [DIDI Server] Se corrigió el spam de Application insigths en logs de docker. Ahora es más fácil debuguear
 - [DIDI Server] Se corrigió un error en swgger que agregaba : en los endpoints
 - [DIDI Server] Se corrigieron varios errores #service-missingX
-- [DIDI Server] Fix email retry verifiacion
-- [DIDI Server] Se corrigio endpoint GET /user/ que estaba intentando validar jwtUser en body
+- [DIDI Server] Fix email retry verificación
+- [DIDI Server] Se corrigió endpoint GET /user/ que estaba intentando validar jwtUser en body
 - [DIDI Server] Se agregaron test para servicios AppAuth, AuthRequest y Semillas. En AuthRequest se detectó que el servicio update no funciona.
