--- a/docs/changelog/v0.6.x.md
+++ b/docs/changelog/v0.6.x.md
@@ -5,16 +5,17 @@ title: Cambios en las versiones 0.6.x
 ### v0.6.1
 **17/08/2021**
 
-- [Semillas] Se corrigio bug en la creación de credenciales de vivienda.
-- [Semillas] Se modifico cron para que la sincronización se ejecute todos los dias a las 8am.
-- [Semillas] Se corrigio flujo de validación de carga de credenciales de vivienda mediante excel.
-- [Semillas] Se corrigio endpoint de revocar credencial.
+- [Semillas] Se corrigió bug en la creación de credenciales de vivienda.
+- [Semillas] Se modificó cron de sincronización. Ahora se ejecuta todos los días a las 8am.
+- [Semillas] Se corrigió flujo de validación de carga de credenciales de vivienda mediante Excel.
+- [Semillas] Se corrigió endpoint de revocar credencial.
+
 ### v0.6.0
 **17/08/2021**
 
-- [DIDI Server] Se agrega variable de entorno ENABLE_SEMILLAS, para poder habilitar o deshabilitar las rutas de semillas, y un middelware para su control. [#181](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/181)
+- [DIDI Server] Se agrega variable de entorno ENABLE_SEMILLAS, para poder habilitar o deshabilitar las rutas de semillas, y un middleware para su control. [#181](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/181)
 - [DIDI Server] Se agrega parámetro opcional para ingresar una imagen, junto con los otros datos, en la delegación de un nuevo issuer. [#180](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/180)
-- [DIDI Server] Se agrega la nueva ruta /issuer/:did/image a Issuer Routes, que devuelve la url de la imagen de un issuer según su Did. [#178](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/178)
+- [DIDI Server] Se agrega la nueva ruta `/issuer/:did/image` a Issuer Routes, que devuelve la url de la imagen de un issuer según su Did. [#178](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/178)
 - [DIDI Server] Se agregan parámetros virtuales 'imageUrl' a los modelos Issuer y User para el manejo de imágenes. [#177](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/177)
 - [DIDI Server] Se corrigen errores en servicios y tests de IssuerService [#176](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/176)
 - [DIDI Server] Se actualiza la consulta a mongodb, para que al ordenar el listado de issuers no se tomen en cuenta las mayúsculas y minúsculas. [#174](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/174)
