--- a/docs/changelog/v0.6.x.md
+++ b/docs/changelog/v0.6.x.md
@@ -2,6 +2,15 @@
 id: v0.6.x
 title: Cambios en las versiones 0.6.x
 ---
+
+### v0.6.2
+**19/08/2021**
+
+- [DIDI Server] Se eliminó `/api/1.0/didi` de todas las rutas. [#182](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/182)
+- [DIDI Server] Se corrigió un error de paralelismo en los test de Travis. También se omiten los test de sms y email [#183](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/183)
+- [DIDI Issuer] Se eliminó `/api/1.0/didi_issuer` de todas las rutas. [#169](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Issuer-module-backend/pull/169)
+- [DIDI Issuer] Se corrigió un error de paralelismo en los test de Travis. [#170](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Issuer-module-backend/pull/170)
+
 ### v0.6.1
 **17/08/2021**
 
