--- a/docs/changelog/v0.6.x.md
+++ b/docs/changelog/v0.6.x.md
@@ -3,6 +3,16 @@ id: v0.6.x
 title: Cambios en las versiones 0.6.x
 ---
 
+### v0.6.3
+**02/09/2021**
+
+- [DIDI Server] Se añadió base de datos local en la configuración de los test de travis [#183](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/183)
+- [DIDI Server] Se actualizaron las dependencias de los test funcionales [#184](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/184)
+- [DIDI Server] Se actualizaron las rutas de issuer para adaptarse a los cambios del issuer module [#185](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/185)
+- [DIDI Issuer] Se actualizaron las rutas de register en base a los últimos cambios en didi-server [#171](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Issuer-module-backend/pull/171)
+- [Semillas] Se agregó un parámetro a /upload para separar los flujos de crear credenciales y reporte de encuesta [20] https://github.com/ong-bitcoin-argentina/DIDI-SSI-Semillas-backend/pull/20
+
+
 ### v0.6.2
 **19/08/2021**
 
