--- a/docs/changelog/v0.6.x.md
+++ b/docs/changelog/v0.6.x.md
@@ -7,7 +7,7 @@ title: Cambios en las versiones 0.6.x
 
 - [DIDI Server] Mejora del servicio de editar issuer [#187](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/187)
 - [DIDI Issuer Backend] Se arregló la edicion de un register [#172](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Issuer-module-backend/pull/172)
-- [DIDI Issuer Backend] Se actualizaó el formulario de nuevo register, de edición de register y la vista de sus datos [#5](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Issuer-module-frontend/pull/5)
+- [DIDI Issuer Frontend] Se actualizó el formulario de nuevo register, de edición de register y la vista de sus datos [#5](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Issuer-module-frontend/pull/5)
 
 ### v0.6.3
 **02/09/2021**
