DIDI Server y app updates for v0.7.0

--- a/docs/changelog/v0.7.x.md
+++ b/docs/changelog/v0.7.x.md
@@ -3,9 +3,14 @@ id: v0.7.x
 title: Cambios en las versiones 0.7.x
 ---
 ### v0.7.0
-**XX/09/2021**
+**15/10/2021**
 
 - [Blockchain Manager] Release v2.0.0! Se actualza el comportamiento de resolución de DIDs.
 - [Blockchain Manager] Si en DID no especifica red, `did:ethr:address`, la operación (verificación, revocación y delegación) se ejecuta en todas las redes en simultaneo. [#21](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/21), [#23](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/23) y [#24](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/24)
 - [Blockchain Manager] Se redujo el tamaño del release. [#26](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/26)
 - [Blockchain Manager] Nuevas funcionalidades para trabajar con DIDs. [#219](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/19), [#20](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/20), [#25](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/25)
+- [Blockchain Manager] Mejoras en la intefaz y documentación. [#29](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/29)
+- [SDK] Release versión v0.0.1. [#42](https://github.com/ong-bitcoin-argentina/DIDI-SSI-App_sdk/pull/42)
+- [DIDI Server] Se corrigió un bug en ruteo de blockain al delegar y verificar. Ahora los DID sin red se delegan y verifican en todas las redes. [#190](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/190)
+- [DIDI Server] Se finalizó el reemplazo de librerías de uPort. [#190](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/190)
+- [ai·di] Se corrigió un bug de navegación al validar DNI. [#132](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/132)
