docs: add reemplazo de librerias de uport por blockchain manager

--- a/docs/changelog/v0.7.x.md
+++ b/docs/changelog/v0.7.x.md
@@ -12,5 +12,8 @@ title: Cambios en las versiones 0.7.x
 - [Blockchain Manager] Mejoras en la intefaz y documentación. [#29](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Blockchain-manager/pull/29)
 - [SDK] Release versión v0.0.1. [#42](https://github.com/ong-bitcoin-argentina/DIDI-SSI-App_sdk/pull/42)
 - [DIDI Server] Se corrigió un bug en ruteo de blockain al delegar y verificar. Ahora los DID sin red se delegan y verifican en todas las redes. [#190](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/190)
-- [DIDI Server] Se finalizó el reemplazo de librerías de uPort. [#190](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/190)
 - [ai·di] Se corrigió un bug de navegación al validar DNI. [#132](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/132)
+- [DIDI Server] [Issuer] Se optimizó la sincronización de datos al delegar. [#191](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/191) y [#176](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Issuer-module-backend/pull/176)
+- [DIDI Server] Se finalizó el reemplazo de librerías de uPort por Blockchain Manager. [#190](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/190)
+- [Issuer] Se finalizó el reemplazo de librerías de uPort Blockchain Manager. [#175](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Issuer-module-backend/pull/175)
+- [Mouro] Se finalizó el reemplazo de librerías de uPort Blockchain Manager. Además se removieron otras librerías innecesarias.[#18](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mouro/pull/18)
