--- a/docs/changelog/v0.7.x.md
+++ b/docs/changelog/v0.7.x.md
@@ -2,7 +2,20 @@
 id: v0.7.x
 title: Cambios en las versiones 0.7.x
 ---
-### v0.7.0
+
+### v0.7.2
+**xx/10/2021**
+- [DIDI Server] Se mejoró el manejo de aplicaciones autorizadas. Ahora se lanza error 401 si el token Authorization en el header es inválido. [#192](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/192)
+- [DIDI Server] Se mejoró el manejo de logs. [#193](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/193)
+- [DIDI Server] Se corrigieron los errores detectados por lgtm bot [#194](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/194)
+- [Issuer module] Se corrigieron los errores detectados por lgtm bot [#177](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Issuer-module-backend/pull/177)
+- [Mouro] Se corrigieron los errores detectados por lgtm bot [#19](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mouro/pull/19)
+- [Semillas] Se corrigieron los errores detectados durante el proceso de build en el frontend.[#6](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Issuer-module-frontend/pull/6)
+- [Ronda] Se mejoró el mananejo de la conexión a MongoDB. Ahora se configura de forma similar a DIDI Server e Issuers. Esto simplifica el archivo de configuración [#175](https://github.com/ong-bitcoin-argentina/DIDI-Ronda/pull/175), [#176](https://github.com/ong-bitcoin-argentina/DIDI-Ronda/pull/176), [#177](https://github.com/ong-bitcoin-argentina/DIDI-Ronda/pull/177), [#178](https://github.com/ong-bitcoin-argentina/DIDI-Ronda/pull/178) 
+- [Ronda] Se corrigió un error en la configración de entorno, proveniente de un typo en ENVIROMENT. [182](https://github.com/ong-bitcoin-argentina/DIDI-Ronda/pull/182) 
+
+
+### v0.7.0 
 **15/10/2021**
 
 - [Blockchain Manager] Release v2.0.0! Se actualza el comportamiento de resolución de DIDs.
