--- a/docs/changelog/v0.7.x.md
+++ b/docs/changelog/v0.7.x.md
@@ -3,6 +3,11 @@ id: v0.7.x
 title: Cambios en las versiones 0.7.x
 ---
 
+### v0.7.3
+**05/11/2021**
+- [Blockchain Manager] Release v2.0.1! Se agregó método para remover la red de un DID. 
+
+
 ### v0.7.2
 **29/10/2021**
 - [DIDI Server] Se mejoró el manejo de aplicaciones autorizadas. Ahora se lanza error 401 si el token Authorization en el header es inválido. [#192](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/192)
