--- a/docs/changelog/v0.7.x.md
+++ b/docs/changelog/v0.7.x.md
@@ -6,7 +6,9 @@ title: Cambios en las versiones 0.7.x
 ### v0.7.3
 **05/11/2021**
 - [Blockchain Manager] Release v2.0.1! Se agregó método para remover la red de un DID. 
+- [DIDI Server] Se modifica el almacenamiento de un issuer en la base de datos y su did se guarda sin la red en la que esta delegado. Permite delegar un mismo did en diferentes blockchains almacenando el hashes de cada delegación en la misma entrada de la base de datos. [#195](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/193) y [#196](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/196)
 
+ 
 
 ### v0.7.2
 **29/10/2021**
