--- a/docs/changelog/v0.7.x.md
+++ b/docs/changelog/v0.7.x.md
@@ -4,8 +4,15 @@ title: Cambios en las versiones 0.7.x
 ---
 
 ### v0.7.3
-**05/11/2021**
-- [Blockchain Manager] Release v2.0.1! Se agregó método para remover la red de un DID. 
+**22/11/2021**
+- [Blockchain Manager] Release v2.0.3!
+- [DIDI Server] Se mejoró el manejo de DIDs de emisores. Ahora se guarda sin blockchain y una lista con los hashes de las txs de las delegaciones. [#195](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/195)
+- [DIDI Server] Se mejoró la información que entrega la ruta GET /. Ahora devuelve más informaciòn, incluyendo la versión esperada de ai·di. [#197](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/197)
+- [DIDI Server] Se completó el CRUD para shareRequests. [#198](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/198)
+- [DIDI Server] Se modificó el endpoint que devuleve la lista de emisores para incluir los shareRequest necesarios para solicitarle información. [#199](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/199)
+- [ai·di] Se mejoró la lista de emisores. Ahora detecta cuando el emisror cargó un shareRequest. [#133](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/133)
+- [ai·di] Se mejoró la visualización de la versión de la app. Ahora se muestra en la pantalla de login [#135](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/135)
+- [ai·di] Se muestra el did activo, si es que existe, en el header de la pantalla inicial y al inicio de la aplicación. [#138](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/138)
 
 
 ### v0.7.2
