--- a/docs/changelog/v0.7.x.md
+++ b/docs/changelog/v0.7.x.md
@@ -3,6 +3,21 @@ id: v0.7.x
 title: Cambios en las versiones 0.7.x
 ---
 
+### System v0.7.4
+**xx/11/2021**
+- [DIDI Server] Minor fixes. [#200](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/200)  
+- [DIDI Server] Fix endpoint verficación de emisores. [#201](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/201)
+- [DIDI Server] Se agregaron endpoint para soportar ShareReq pertenecientes a los emisores. [#202](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/201)
+- [DIDI Issuer] Se agregaron endpoints para soportar la creación de ShareReq. [#178](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Issuer-module-backend/pull/178)
+
+### ai·di 1.5.1
+**10/12/2021**
+- [ai·di] Se corrigió un error al desloguear la aplicación. [#140](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/140)
+- [ai·di] Se corrigió la validación al ingresar el nombre. Ya no acepta simbo una notificación al usuario cuando no cuenta con la versión apropiada de la aplicación. [#141](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/141)
+- [ai·di] Se actualizó el target del SDK a 30. [#142](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/142)
+- [ai·di] Se habilitó el botón trasero de la cámara. [#143](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/143)
+- [ai·di] Se resolvió parcialmente un bug al cargar el DID al minimizar la app. [#145](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/145)
+
 ### v0.7.3
 **22/11/2021**
 - [Blockchain Manager] Release v2.0.3!
@@ -13,12 +28,6 @@ title: Cambios en las versiones 0.7.x
 - [ai·di] Se mejoró la lista de emisores. Ahora detecta cuando el emisror cargó un shareRequest. [#133](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/133)
 - [ai·di] Se mejoró la visualización de la versión de la app. Ahora se muestra en la pantalla de login [#135](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/135)
 - [ai·di] Se muestra el did activo, si es que existe, en el header de la pantalla inicial y al inicio de la aplicación. [#138](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/138)
-
-
-**05/11/2021**
-- [Blockchain Manager] Release v2.0.1! Se agregó método para remover la red de un DID. 
-- [DIDI Server] 
-
  
 
 ### v0.7.2
