--- a/docs/changelog-aidi/v1.5.x.md
+++ b/docs/changelog-aidi/v1.5.x.md
@@ -3,6 +3,11 @@ id: v1.5.x
 title: Cambios en las versiones v1.5.x
 ---
 
+### ai·di 1.5.2
+**18/12/2021**
+- [ai·di] Se resolvió un problema de selección de camara trasera y frontal. [#146](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/146)
+- [ai·di] Se elimió código muerto, ejemplos, directorios y documentación inválida. [#148](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/148)
+
 ### ai·di 1.5.1
 **13/12/2021**
 - [ai·di] Se corrigió un error al desloguear la aplicación. [#140](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/140)
