docs: Changelog v0.7.3-dev.5

--- a/docs/changelog-system/v0.7.x.md
+++ b/docs/changelog-system/v0.7.x.md
@@ -3,12 +3,13 @@ id: v0.7.x
 title: Cambios en las versiones 0.7.x
 ---
 
-### System v0.7.4
-**xx/11/2021**
+### System v0.7.3-dev.5
+**18/12/2021**
 - [DIDI Server] Minor fixes. [#200](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/200)  
 - [DIDI Server] Fix endpoint verficación de emisores. [#201](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/201)
 - [DIDI Server] Se agregaron endpoint para soportar ShareReq pertenecientes a los emisores. [#202](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Server/pull/201)
 - [DIDI Issuer] Se agregaron endpoints para soportar la creación de ShareReq. [#178](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Issuer-module-backend/pull/178)
+- [System] Se actualizó a Node 12 en Docker. Ahora todas las imagernes utilzan [node:12](https://github.com/nodejs/docker-node/blob/6e8999e5e1170fc6a791f3e549adfaa405da396e/12/stretch/Dockerfile). 
 
 ### v0.7.3
 **22/11/2021**
