add_changes_first

--- a/docs/changelog-aidi/v1.5.x.md
+++ b/docs/changelog-aidi/v1.5.x.md
@@ -2,6 +2,17 @@
 id: v1.5.x
 title: Cambios en las versiones v1.5.x
 ---
+### ai·di 1.5.3
+**17/02/2021**
+
+- [ai·di] se implementó la captura del frente del documento por vuSecurity[#167](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/167)
+- [ai·di] se implementó la cancelación de la validación de identidad por vuSecurity[#163](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/163)
+- [ai·di] se implementó el inicio de la validación de identidad por vuSecurity[#162](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/162)
+- [ai·di] se eliminó antiguo cartel rojo de validación [#156](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/156)
+- [ai·di] se agregó navegación del botón de validar con renaper [#155](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/155)
+- [ai·di] se agregó navegación del botón de validar con semillas [#154](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/154)
+- [ai·di] se corrigió pantalla de inicio [#151](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/151)
+- [ai·di] se agregó nueva pantalla con todas las validaciones de identidad [#150](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Mobile/pull/150)
 
 ### ai·di 1.5.2
 **18/12/2021**
