--- a/docs/changelog-system/v0.8.x.md
+++ b/docs/changelog-system/v0.8.x.md
@@ -3,6 +3,32 @@ id: v0.8.x
 title: Cambios en las versiones 0.8.x
 ---
 
+### v0.8.1
+**11/3/2022**
+- [Identity] Se agrega test completo de flujo de validación [#44](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/44)
+- [Identity] Normalización de parametros [#44](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/44)
+- [Identity] Se installa y configura DIDI-SSI-Logger [#43](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/43)
+- [Identity] Se crea servicio de llamados a Didi Server [#41](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/41)
+- [Identity] Se agrega reporte de coverage a los tests [#39](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/39)
+- [Identity] Reorganización de rutas y de código [#38](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/38) y  [#40](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/40)
+- [Identity] Se normalizan los mensajes de error [#37](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/37)
+- [Identity] Se elimina el prefijo /api de todas las rutas [#36](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/36)
+- [Identity] Se agrega nvmrc en las Github Actions [#35](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/35)
+- [Identity] Se crea endpoint /endOperation y sus tests [#34](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/34)
+- [Identity] Se crean tests para los métodos del servicio de redis, se agrega prefijo a las keys de redis, se actualiza la versión de la imagen de node en Dockerfile y se actualiza la integración continua  [#33](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/33)
+- [Identity] Se crea servicio para adherir la selfie  [#31](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/31)
+- [Identity] Se agrega userName en la respuesta de creación de operación  [#30](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/30)
+- [Identity] Se testea el cache (Github Actions) y se agrega superTest  [#29](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/29)
+- [Identity] Se crea un servicio para el manejo de los métodos de redis  [#28](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/28)
+- [Identity] Optimización de endpoints para front y back de imágen [#27](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/27)
+- [Identity] Se agrega la ruta "/" para brindar información cuando se accede al servidor [#25](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/25)
+- [Identity] Se agregar mensaje de error para rutas invalidas [#24](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/24)
+- [Identity] Se implementa cache usando redis, para la validación de usuario [#23](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/23)
+- [Identity] Se crean endpoints /addDocumentImage y /addBack junto con sus tests. [#21](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/21) y [#22](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/22)
+- [Identity] Se crea un middelware que valida si el usuario existe en aidi [#20](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/20)
+- [Identity] Se actualizan las constantes [#19](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/19)
+- [Identity] Se crea endpoint /addFront y sus tests. [#17](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/17) y [#18](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/18)
+- [DIDI Server] Se actualiza el servicio verifyUserToken y sus tests [#207](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/207)
 ### v0.8.0
 **1/2/2022**
 - [Identity] Se agrega middelware para validación de parámetros y se modifica el modelo de Usuario eliminando nombre y apellido de los datos. [#16](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/16)
