--- a/docs/changelog-system/v0.8.x.md
+++ b/docs/changelog-system/v0.8.x.md
@@ -3,9 +3,26 @@ id: v0.8.x
 title: Cambios en las versiones 0.8.x
 ---
 
+### v0.8.2
+**8/4/2022**
+- [Issuer-frontend] Se modifican pantallas de credenciales pendientes, emitidas y revocadas. Reemplazando columnas de nombre y apellido, por columna de DID. [#13](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/13)
+- [Issuer-backend] Se actualiza el CertDTO, para que acepte credenciales con solo DID como dato del participante. [#188](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/188)
+- [Issuer-backend] Se arregla llamado a mensaje de MISSING_ELEMENT. [#187](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/187)
+- [Identity] Se agrega variable de debug condicional. [#61](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/61)
+- [Identity] Se revisan los mensajes de error, y se arreglan los que esta mal.[#60](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/60)
+- [Identity] Se actualizan las rutas con el fin de respetar las reglas de HTTP. [#58](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/58)
+- [Identity] Se actualizan variables de entorno. [#56](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/56)
+- [Identity] Actualización del README. [#55](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/55)
+- [Identity] Se implementa la emisión de credenciales en base al resultado de la validación de identidad. [#54](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/54)
+- [Identity] Se normalizan los parametros del servicio authRequest. [#53](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/53)
+- [Identity] Se envia error si no se detecta la imagen del documento. [#52](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/52)
+- [Identity] Integracion con Jira. [#51](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/51)
+- [Identity] Se crean servicion createCert y emmitCert para la creación y emisión de las credenciales. [#50](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/50)
+- [Identity] Se modifican los mensajes de error que arrojan los servicios. [#47](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/47)
+
 ### v0.8.1
 **11/3/2022**
-- [Identity] Se agrega test completo de flujo de validación [#44](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/44)
+- [Identity] Se agrega test completo de flujo de validación [#45](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/45)
 - [Identity] Normalización de parametros [#44](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/44)
 - [Identity] Se installa y configura DIDI-SSI-Logger [#43](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/43)
 - [Identity] Se crea servicio de llamados a Didi Server [#41](https://github.com/ong-bitcoin-argentina/DIDI-SSI-Identity-issuer/pull/41)
